CodeSamples/Kubernetes/Ingress/axionui/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: axion-ui-ingress
spec:
  ingressClassName: azure-application-gateway
  rules:
  - host: axionui-new.sanjay.business
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: axion-ui
            port: 
              number: 80
